Валидация параметров id для учетных записей настроена. Изменён вывод сообщения об отключении 2fa.

--- a/TODO
+++ b/TODO
@@ -63,8 +63,8 @@
     [+] - если мастер пароль (то его редактирвоание, и запрет на создание новых учетных записей если его нет, то запрет)
            !!! upd: очень важная вещь, оказалась делал записи без него.
 [+] - изменить систему сброса мастер если включена 2fa
-[] - изменить выключение 2fa ?
-[] - проверить параметры котрыйе пердеются в запросе вида {id}
+[+] - изменить выключение 2fa ?
+[+] - проверить параметры котрыйе пердеются в запросе вида {id} - добавлены что это цифры
 
 !ВАЖНОЕ ПРИМЕЧАНИЕ: для того чтобы восстановить мастер пароль, нужна почта. Сейчас наколько я понимаю
 можно менять без подтверждения, например кода подтверждения и т.д. То есть можно просто напросто взломать
@@ -97,8 +97,7 @@ get - получение, post- отправка, put - обновление, pa
 
 при завершении работы или публикации на хостинге:
 [] - возможно настроить планировщик задач на удаление токенов для воостановления мастер пароля и кодов
-+ посмотреть время работы ссылок, кодов
-
++ посмотреть время работы ссылок, кодов (для отключения 2fa, токенов пароля, токенов восстановления пароля)
 
 
 Для фронта:
