переопределён маршут отключения 2fa
	modified:   TODO
	modified:   routes/api.php

--- a/TODO
+++ b/TODO
@@ -95,10 +95,10 @@ get - получение, post- отправка, put - обновление, pa
     401 - не авторизован, 422 неправильные данные, 403-запрещено, 404 - не найдено, 500 - ошибка сервера, 419 - csfr токен устарел
     200 - ок , 201 - создано, 204 - no content
 
-при завершении работы или публикации на хостинге:
+при завершении финальной  работы или публикации на хостинге:
 [] - возможно настроить планировщик задач на удаление токенов для воостановления мастер пароля и кодов
 + посмотреть время работы ссылок, кодов (для отключения 2fa, токенов пароля, токенов восстановления пароля)
-
+[] - подключить Redis
 
 Для фронта:
 [+] - разобраться с подтверждением почты почему какаято-ссылка ведет
