Опубликован (создан ) кастомный прослушиватель и добавлен в очерель, добавлены в очередь уведомления, добавлена новая нотификация пожтверждения почты и восстановления пароля.

--- a/TODO
+++ b/TODO
@@ -99,7 +99,7 @@ get - получение, post- отправка, put - обновление, pa
 [] - возможно настроить планировщик задач на удаление токенов для воостановления мастер пароля и кодов
 + посмотреть время работы ссылок, кодов (для отключения 2fa, токенов пароля, токенов восстановления пароля)
 [] - подключить Redis
-
+php artisan:make queue:work - очередь , можно включить в гипервизоре (редис тот же самый)
 Для фронта:
 [+] - разобраться с подтверждением почты почему какаято-ссылка ведет
 [] - разрешение куки в браузере для фронта
