Удаление аккаунта было изменено. Теперь если подтверждена почта, то запрашивается и пароль для входа и код подтверждения. Для этого создали маграцию и модель , роуты и модифицированны контролёры. (отправка кодов при верефицированнйо почте, проверка кода при верефицированнойм аккаунте). Созаны шаблоны письма , email (Mail::to добавлены в очередь)

--- a/TODO
+++ b/TODO
@@ -100,6 +100,10 @@ get - получение, post- отправка, put - обновление, pa
 + посмотреть время работы ссылок, кодов (для отключения 2fa, токенов пароля, токенов восстановления пароля)
 [] - подключить Redis
 php artisan:make queue:work - очередь , можно включить в гипервизоре (редис тот же самый)
+[] - добавить тотрилинги для важных маршутов]
+[+] - очереди добавлены для отправки писем
+[+] - cсоздать обработчик для удаления с верефицированной почтой
+[] - отключение 2fa только с отправкой кода если подтверждена почта, если нет то пароль
 Для фронта:
 [+] - разобраться с подтверждением почты почему какаято-ссылка ведет
 [] - разрешение куки в браузере для фронта
